fix: change responses by api specs
